resources/css/prisa.css
body {
    background-color:teal;
}

.container {
    border: .2em solid black;
    position: fixed;
    text-align: center;
    border-top: none;
    border-bottom: none;
    padding: 10px;
    height: 100%;
    background-color: lightgray;
    right: 0px;
    left: 0px;
    overflow: scroll;
}
/*.container p {padding: 10px;}*/

.container ul {
    text-align: left;
}

.faq li{
    font-weight: bold;
}

p{
    text-align: justify;
}

.p-2 {
    text-align: left;
}

.navbar-dark {
    background-color: black;
}

ol{
    font-weight: bold;
}

.main-list{
    font-weight: normal;
    padding: 0px;
}
form {
    position: relative;
    padding: .5em;
}
footer {
    background-color: black;
    color: white;
    font-size: .75em;
    position: absolute;
    right: 0;
    bottom: 0;
    left: 0;
    padding: .25em;
}
#pb {
    width: 0%;
    background-color: limegreen
}
.progress{
    margin: 10px;
}
/*.progress:not([value]) {display: none;}*/

.progress[value]::-webkit-progress-value {
    display: flex;
    background-image: 
    -webkit-linear-gradient(-45deg, transparent 33%, rgba(0, 0, 0, .1) 33%, rgba(0,0, 0, .1)        66%, transparent 66%),
    -webkit-linear-gradient(top, rgba(255, 255, 255, .25), rgba(0, 0, 0, .25)),
    -webkit-linear-gradient(left, yellow, green );
    height: 35px;
    border-radius: 2px; 
    background-size: 35px 20px, 100% 100%, 100% 100%;
}
.input-group-prepend {
    cursor: context-menu;
}

